# DLoMC-Localization

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-chinese-patch.yml
resource/01-original/Daily Lives of My Countryside v0.3.2.1/www/: index.html
resource/01-original/Daily Lives of My Countryside v0.3.2.1/www/data/: Actors.json  Animations.json  Classes.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Map002.json  Map004.json  Map005.json  Map006.json  Map007.json  Map008.json  Map009.json  Map011.json  Map012.json  Map013.json  Map014.json  Map015.json  Map016 - Copy.json  Map016.json  Map018.json  Map019.json  Map020.json  Map022.json  Map023.json  Map024.json  Map025.json  Map026.json  Map027.json  Map028.json  Map029.json  Map030.json  Map031.json  Map032.json  Map033.json  Map034.json  Map036.json  Map037.json  Map038.json  (+57 more)
resource/01-original/Daily Lives of My Countryside v0.3.2.1/www/js/: plugins.js
resource/01-original/Daily Lives of My Countryside v0.3.2.1/www/js/plugins/: MOG_TimeSystem.js
resource/01-original/Daily Lives of My Countryside v0.3.2.1/www/quest/: Quests.txt
resource/04-special-file/2 Hints/: Adeera.txt  Alchemist.txt  Anna.txt  Ava.txt  Betty.txt  Bobbie.txt  Cindy.txt  Daisy.txt  Danesia.txt  Douie.txt  Ek.txt  Elphaba.txt  Emmi.txt  Felix - 1Original.txt  Felix - 2Gay.txt  Felix - 3Share.txt  Horse - 1Original.txt  Horse - 2Me.txt  Horse - 3Real.txt  Joyce.txt  Kate.txt  Korona.txt  Mabel.txt  Mae.txt  Maleena.txt  Megan.txt  Mob.txt  Moo.txt  Nina.txt  Pixie.txt  Rouge.txt  Zoe.txt
src/: __init__.py  config.py  core.py  enum.py  exception.py  log.py  model.py  paratranz.py  toast.py
src/core/: __init__.py  converter.py  paratranz.py  project.py  restorer.py  subscribestar.py  tweaker.py
src/schema/: model.py
