[project]
name = "dlomc-localization"
dynamic = [ "version", "readme", "dependencies" ]
description = "Chinese localization of Daily Lives of My Contryside."
authors = [
    {name = "Number_Sir",email = "number_sir@126.com"}
]
maintainers = [
    { name = "Number_Sir", email = "number_sir@126.com" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["rpgmv", "localization"]


[project.urls]
repository = "https://github.com/NumberSir/dlomc-localization"
documentation = "https://github.com/NumberSir/dlomc-localization/README.md"
issues = "https://github.com/NumberSir/dlomc-localization/issues"

[tool.poetry]
package-mode = false
version = "0.0.1-alpha"
readme = [ "README.md" ]
exclude = [".env", ".venv", ".idea", ".vscode"]
requires-poetry = ">=2.0"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = ">=1.1.0,<2.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
loguru = ">=0.7.3,<0.8.0"
pytest = ">=8.3.5,<9.0.0"
poetry-core = ">=2.0.0"
httpx = ">=0.28.1,<0.29.0"
pydantic = "^2.11.5"
lxml = "^5.4.0"
mega-py = "^1.0.8"
windows-toasts = "^1.3.1"
ruff = "^0.12.0"
selenium = "^4.33.0"

[tool.ruff]
cache-dir = "data/cache/ruff"
exclude = [".venv", ".idea", "data", "dist", "resource"]
include = ["*.py"]
line-length = 121  # pycharm default
namespace-packages = ["src/core", "src/schema"]
respect-gitignore = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 121
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501"]
logger-objects = ["src.log.logger"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
