[project]
name = "dlomc-localization"
version = "0.0.1-alpha"
description = "Chinese localization of Daily Lives of My Contryside."
authors = [{ name = "Number_Sir", email = "number_sir@126.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
maintainers = [{ name = "Number_Sir", email = "number_sir@126.com" }]
keywords = [
    "rpgmv",
    "localization",
]
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "loguru>=0.7.3,<0.8.0",
    "pytest>=8.3.5,<9.0.0",
    "poetry-core>=2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.11.5,<3",
    "lxml>=5.4.0,<6",
    "windows-toasts>=1.3.1,<2",
    "ruff>=0.12.3",
]

[project.urls]
repository = "https://github.com/NumberSir/dlomc-localization"
documentation = "https://github.com/NumberSir/dlomc-localization/README.md"
issues = "https://github.com/NumberSir/dlomc-localization/issues"

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".venv",
    ".idea",
    ".vscode",
]

[tool.hatch.build.targets.wheel]
exclude = [
    ".env",
    ".venv",
    ".idea",
    ".vscode",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
cache-dir = "data/cache/ruff"
exclude = [".venv", ".idea", "data", "dist", "resource"]
include = ["*.py"]
line-length = 121  # pycharm default
namespace-packages = ["src/core", "src/schema"]
respect-gitignore = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 121
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501"]
logger-objects = ["src.log.logger"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

